--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "prettier-eslint": "^9.0.1"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.9.2"
   }
 }
